[package]
name = "batonics"
version = "0.1.0"
edition = "2024"

[dependencies]
dbn = "0.43.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
arc-swap = "1.6"
axum = "0.7"
crossbeam-channel = "0.5"
postgres = { version = "0.19", default-features = false, features = ["with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["with-serde_json-1"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "io-util", "net", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
prost = "0.14.1"
bytes = "1.9"

[build-dependencies]
prost-build = "0.14.1"
